update italian translation

--- a/Assets/Resources/I18n/it.csv
+++ b/Assets/Resources/I18n/it.csv
@@ -13,7 +13,7 @@ mainmenu.musicvolume,Volume musica
 mainmenu.voicevolume,Volume voci
 mainmenu.sfxvolume,Volume effetti sonori
 mainmenu.update,"È disponibile una nuova versione, scaricala su itch.io !"
-mainmenu.sharedata,Accetti al condividere data con Source Macchiato come il numero di volte che hai aperto il gioco?
+mainmenu.sharedata,Accetti alla condivisione di statistiche con Source Macchiato e The Latte Team
 mainmenu.night,Notte 
 customnight.customizenight,Personalizza la Notte
 customnight.twenty,20/20/20/20
