--- a/Assets/Resources/I18n/fr.csv
+++ b/Assets/Resources/I18n/fr.csv
@@ -3,8 +3,9 @@ mainmenu.continue,Continuer
 mainmenu.customnight,Nuit Perso
 mainmenu.options,Options
 mainmenu.credits,Crédits
-mainmenu.language,Langage
+mainmenu.language,Langue
 mainmenu.layout,Disposition
+mainmenu.controls,Contrôles
 mainmenu.online,En Ligne
 mainmenu.analyticdata,Données Analytiques
 mainmenu.audio,Audio
@@ -14,6 +15,8 @@ mainmenu.voicevolume,Volume des voix
 mainmenu.sfxvolume,Volume des effets sonores
 mainmenu.update,"Une nouvelle version est disponible, allez la télécharger sur itch.io !"
 mainmenu.sharedata,Acceptez-vous le partage d'informations de statistique avec nous ?
+mainmenu.shareanalyticsdescription,Partage d'informations de statistique
+mainmenu.motioncontrolsdescription,Activer la détection de mouvement de la télécommande Wii
 mainmenu.night,Nuit
 customnight.customizenight,Nuit Personnalisée
 customnight.twenty,20/20/20/20
