--- a/Assets/Resources/I18n/it.csv
+++ b/Assets/Resources/I18n/it.csv
@@ -5,6 +5,7 @@ mainmenu.options,Impostazioni
 mainmenu.credits,Crediti
 mainmenu.language,Lingua
 mainmenu.layout,Layout
+mainmenu.controls,Controlli
 mainmenu.online,Online
 mainmenu.analyticdata,Analisi dei dati
 mainmenu.audio,Audio
@@ -14,6 +15,8 @@ mainmenu.voicevolume,Volume voci
 mainmenu.sfxvolume,Volume effetti sonori
 mainmenu.update,"È disponibile una nuova versione, scaricala su itch.io !"
 mainmenu.sharedata,Accetti alla condivisione di statistiche con Source Macchiato e The Latte Team
+mainmenu.shareanalyticsdescription,Condivisione dell'analisi dei dati
+mainmenu.motioncontrolsdescription,Motion controls del Wiimote
 mainmenu.night,Notte 
 customnight.customizenight,Personalizza la Notte
 customnight.twenty,20/20/20/20
