--- a/Assets/Resources/I18n/tr.csv
+++ b/Assets/Resources/I18n/tr.csv
@@ -5,6 +5,7 @@ mainmenu.options,Ayarlar
 mainmenu.credits,Emeği geçenler
 mainmenu.language,Dil
 mainmenu.layout,Düzen
+mainmenu.controls,Kontroller
 mainmenu.online,Çevrimiçi
 mainmenu.analyticdata,Analitik veriler
 mainmenu.audio,Ses
@@ -14,6 +15,8 @@ mainmenu.voicevolume,Diyalog ses seviyesi
 mainmenu.sfxvolume,Ses efektleri seviyesi
 mainmenu.update,"Yeni bir sürüm mevcut, hemen itch.io üzerinden indir!"
 mainmenu.sharedata,Bize istatistiksel bilgi paylaşımını kabul ediyor musunuz?
+mainmenu.shareanalyticsdescription,Analitik verileri paylaş
+mainmenu.motioncontrolsdescription,Wii kumandası hareket kontrolleri
 mainmenu.night,Gece
 customnight.customizenight,Geceyi özelleştir
 customnight.twenty,20/20/20/20
