--- a/Assets/Resources/I18n/de.csv
+++ b/Assets/Resources/I18n/de.csv
@@ -9,6 +9,7 @@ mainmenu.controls,Steuerungen
 mainmenu.online,Online
 mainmenu.analyticdata,Analytische Daten
 mainmenu.audio,Audio
+mainmenu.volume,Lautstärke
 mainmenu.generalvolume,Allgemeine Lautstärke
 mainmenu.musicvolume,Musiklautstärke
 mainmenu.voicevolume,Stimmenlautstärke
@@ -17,6 +18,7 @@ mainmenu.update,Eine neue Version ist verfügbar! Lade sie auf itch.io herunter!
 mainmenu.sharedata,Akzeptierst du die Weitergabe statistischer Information an uns?
 mainmenu.shareanalyticsdescription,Teilt analytische Daten
 mainmenu.motioncontrolsdescription,Bewegungssteuerung der Wii-Fernbedienung
+mainmenu.displaypointerdescription,Wii-Fernbedienungszeiger anzeigen
 mainmenu.night,Nacht
 customnight.customizenight,Nacht personalisieren
 customnight.twenty,20/20/20/20
