Added new translations in all languages

--- a/Assets/Resources/I18n/ca.csv
+++ b/Assets/Resources/I18n/ca.csv
@@ -171,3 +171,11 @@ nightsix.phoneguy.lineseven,"Estaràs al torn de dia, vesteix el teu uniforme, m
 nightsix.phoneguy.lineheight,"assegura't que no facin mal a ningú d'acord, eh per ara simplement acaba la nit,"
 nightsix.phoneguy.linenine,eh quan el lloc eventualment torni a obrir-se segurament jo prendré el torn de nit.
 nightsix.phoneguy.lineten,"D'acord, bona nit i bona sort."
+"mainmenu.video","Vídeo"
+"mainmenu.subtitles","Subtítols"
+"mainmenu.panoramaeffectdescription","Habilita l'efecte de panorama"
+"mainmenu.subtitlesdescription","Habilita els subtítols"
+"mainmenu.yes","Sí"
+"mainmenu.no","No"
+"mainmenu.select","Selecciona <sprite name=WiiU-A>"
+"mainmenu.aspectratiodescription","Ratio d'aspecte"
