--- a/Assets/Resources/I18n/de.csv
+++ b/Assets/Resources/I18n/de.csv
@@ -171,3 +171,11 @@ nightsix.phoneguy.lineseven,"Du wirst auf Tagesschicht sein. Trag deine Uniform,
 nightsix.phoneguy.lineheight,stell sicher dass sie niemanden wehtuen okay? Ähhm jetzt solltest du es erstmal die Nacht durchmachen.
 nightsix.phoneguy.linenine,"Ähhm, wenn der Ort eventuell wieder öffnet, werde Ich wahrscheinlich die Nachtschicht selbst übernehmen."
 nightsix.phoneguy.lineten,"Okay, gute Nacht und viel Glück."
+"mainmenu.video","Video"
+"mainmenu.subtitles","Untertitel"
+"mainmenu.panoramaeffectdescription","Panoramaeffekt aktivieren"
+"mainmenu.subtitlesdescription","Untertitel aktivieren"
+"mainmenu.yes","Ja"
+"mainmenu.no","Nein"
+"mainmenu.select","Auswählen <sprite name=WiiU-A>"
+"mainmenu.aspectratiodescription","Seitenverhältnis"
