--- a/Assets/Resources/I18n/es.csv
+++ b/Assets/Resources/I18n/es.csv
@@ -172,3 +172,11 @@
 "nightsix.phoneguy.lineheight","asegúrate de que no lastimen a nadie, uh por ahora sólo pasa la noche,"
 "nightsix.phoneguy.linenine","uh cuando el lugar finalmente se abra de nuevo probablemente voy a tomar el turno de noche yo mismo."
 "nightsix.phoneguy.lineten","Bueno, buenas noches y buena suerte."
+"mainmenu.video","Vídeo"
+"mainmenu.subtitles","Subtítulos"
+"mainmenu.panoramaeffectdescription","Activar el efecto panorama"
+"mainmenu.subtitlesdescription","Activar subtítulos"
+"mainmenu.yes","Si"
+"mainmenu.no","No"
+"mainmenu.select","Seleccionar <sprite name=WiiU-A>"
+"mainmenu.aspectratiodescription","Relación de aspecto"
