--- a/Assets/Resources/I18n/fr.csv
+++ b/Assets/Resources/I18n/fr.csv
@@ -171,3 +171,11 @@ nightsix.phoneguy.lineseven,"Tu seras de jour, porte ton uniforme, reste proche 
 nightsix.phoneguy.lineheight,"assure-toi qu'ils ne blessent personne d'accord ? Euh, pour l'instant, contente-toi de passer la nuit,"
 nightsix.phoneguy.linenine,"euh, quand l'endroit rouvrira enfin, je prendrai probablement moi-même le service de nuit."
 nightsix.phoneguy.lineten,"Ok, bonne nuit et bonne chance."
+"mainmenu.video","Vidéo"
+"mainmenu.subtitles","Sous-titres"
+"mainmenu.panoramaeffectdescription","Activer l'effet de panorama"
+"mainmenu.subtitlesdescription","Activer les sous-titres"
+"mainmenu.yes","Oui"
+"mainmenu.no","Non"
+"mainmenu.select","Selectionner <sprite name=WiiU-A>"
+"mainmenu.aspectratiodescription","Ratio d'aspect"
