--- a/Assets/Resources/I18n/it.csv
+++ b/Assets/Resources/I18n/it.csv
@@ -171,3 +171,11 @@ nightsix.phoneguy.lineseven,"Farai il turno di giorno, indosserai la tua uniform
 nightsix.phoneguy.lineheight,"assicurati che non facciano del male a nessuno, okay, per ora resisti solo alla notte,"
 nightsix.phoneguy.linenine,"uh, quando il posto alla fine riaprirà, probabilmente farò io stesso il turno di notte."
 nightsix.phoneguy.lineten,"Ok, buonanotte e buona fortuna."
+"mainmenu.video","Video"
+"mainmenu.subtitles","Sottotitoli"
+"mainmenu.subtitlesdescription","Abilità Sottotitoli"
+"mainmenu.panoramaeffectdescription","Abilità l'effetto panoramico"
+"mainmenu.yes","Si"
+"mainmenu.no","No"
+"mainmenu.select","Seleziona <sprite name=WiiU-A>"
+"mainmenu.aspectratiodescription","Aspect ratio"
