--- a/Assets/Resources/I18n/tr.csv
+++ b/Assets/Resources/I18n/tr.csv
@@ -171,3 +171,11 @@ nightsix.phoneguy.lineseven,"Gündüz vardiyasındasınız, üniformanızı giyi
 nightsix.phoneguy.lineheight,"kimseye zarar vermediklerinden emin olun, tamam mı? Uh, şimdilik sadece geceyi atlatmaya çalışın,"
 nightsix.phoneguy.linenine,"Uh, mekan nihayet tekrar açıldığında, muhtemelen gece vardiyasını ben alırım."
 nightsix.phoneguy.lineten,"Tamam, iyi geceler ve bol şans."
+"mainmenu.video","Video"
+"mainmenu.subtitles","Altyazılar"
+"mainmenu.panoramaeffectdescription","Panorama efektini etkinleştir"
+"mainmenu.subtitlesdescription","Altyazıları etkinleştir"
+"mainmenu.yes","Hayır"
+"mainmenu.no","Evet"
+"mainmenu.select","Seç <sprite name=WiiU-A>"
+"mainmenu.aspectratiodescription","Görüntü oranı"
