Added translation keys on some texts

--- a/Assets/Resources/I18n/fr.csv
+++ b/Assets/Resources/I18n/fr.csv
@@ -177,5 +177,5 @@ nightsix.phoneguy.lineten,"Ok, bonne nuit et bonne chance."
 "mainmenu.subtitlesdescription","Activer les sous-titres"
 "mainmenu.yes","Oui"
 "mainmenu.no","Non"
-"mainmenu.select","Selectionner <sprite name=WiiU-A>"
+"mainmenu.select","Sélectionner <sprite name=WiiU-A>"
 "mainmenu.aspectratiodescription","Ratio d'aspect"
